[gd_scene load_steps=10 format=3 uid="uid://c48njl6ghr63r"]

[ext_resource type="Script" path="res://scenes/game_object/enemy/guana_enemy/guana_enemy.gd" id="1_20opb"]
[ext_resource type="Resource" uid="uid://cgixwopa3t0lj" path="res://scenes/game_object/enemy/guana_enemy/guana_stats.tres" id="2_dload"]
[ext_resource type="Texture2D" uid="uid://drt5kod16lia2" path="res://assets/textures/gui/Red/Red.png" id="3_iqsdh"]
[ext_resource type="Texture2D" uid="uid://xgnqk8b7ffx5" path="res://assets/textures/gui/Green/Green.png" id="4_gqw3o"]
[ext_resource type="PackedScene" uid="uid://dgh3bd5cb4ko0" path="res://scenes/game_object/enemy/basics/basic_guana.tscn" id="5_64x8g"]

[sub_resource type="ViewportTexture" id="ViewportTexture_g4xx7"]
viewport_path = NodePath("Bars/LifeViewport")

[sub_resource type="AtlasTexture" id="AtlasTexture_mwrx1"]
atlas = ExtResource("3_iqsdh")
region = Rect2(162, 130, 76, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabb2"]
atlas = ExtResource("4_gqw3o")
region = Rect2(162, 130, 76, 14)

[sub_resource type="BoxShape3D" id="BoxShape3D_8lis3"]
size = Vector3(5, 4, 3)

[node name="GuanaEnemy" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_20opb")
stats = ExtResource("2_dload")

[node name="EnemyController" type="Node" parent="."]

[node name="Bars" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.88525, 0)
billboard = 1
texture = SubResource("ViewportTexture_g4xx7")

[node name="LifeViewport" type="SubViewport" parent="Bars"]
transparent_bg = true
size = Vector2i(76, 14)

[node name="LifeProgressBar" type="TextureProgressBar" parent="Bars/LifeViewport"]
offset_right = 80.0
offset_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = SubResource("AtlasTexture_mwrx1")
texture_progress = SubResource("AtlasTexture_jabb2")

[node name="Label" type="Label" parent="Bars/LifeViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "123456788"

[node name="Sprite3D" type="Sprite3D" parent="Bars"]

[node name="GuanaChar" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GuanaChar"]
transform = Transform3D(1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_8lis3")

[node name="CharacterBody" parent="GuanaChar" instance=ExtResource("5_64x8g")]
transform = Transform3D(-1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 0, 0, 0)
